implementations/rust/ockam/ockam/tests/node_attribute/fails_if_item_is_not_a_function.stderr
error: expected `fn`
 --> $DIR/fails_if_item_is_not_a_function.rs:5:1
  |
5 | struct A {}
  | ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fails_if_item_is_not_a_function.rs:4:1
  |
4 | / #[ockam::node]
5 | | struct A {}
  | |___________^ consider adding a `main` function to `$DIR/tests/node_attribute/fails_if_item_is_not_a_function.rs`
